<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <android.support.v4.widget.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <EditText
            android:id="@+id/var_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="@string/login_email"
            android:hint="@string/login_email"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/var_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="@string/login_password"
            android:hint="@string/login_password"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/var_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:text="@string/login_error" />

        <Button
            android:id="@+id/var_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="@color/colorPrimaryLight"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/var_login_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_forgot"
            android:layout_gravity="right"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/var_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_signup"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>