<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:theme="@style/AppThemeBar"
    >

    <!--Login info-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signup_layoutTop"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Нэвтрэх"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:autofillHints="@string/signup_email"
            android:hint="@string/signup_email" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:autofillHints="@string/signup_password"
            android:hint="@string/signup_password" />
    </LinearLayout>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signup_layoutMiddle"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_layoutTop"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Бусад"
            android:layout_columnSpan="2"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/signup_image"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:background="@drawable/ic_icon_image"
            />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_marginLeft="5dp"
                android:id="@+id/signup_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/signup_lname"
                android:hint="@string/signup_lname"
                android:inputType="text"
                android:textSize="16sp"/>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="@string/signup_fname"
                android:hint="@string/signup_fname"
                android:textSize="16sp"/>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="@string/signup_phone"
                android:hint="@string/signup_phone"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="@string/signup_position"
                android:hint="@string/signup_position"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_signature_label"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"/>
            <LinearLayout
                android:id="@+id/signup_signature"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@drawable/shape"
                />
        </LinearLayout>
    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:text="Алдаа гарлаа, та дахин шалгана уу!"
        app:layout_constraintTop_toBottomOf="@id/signup_layoutMiddle"
        />
    <Button
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:text="@string/signup_buttonOK"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_layoutMiddle"
        android:background="@drawable/ic_shape_pill"
        android:backgroundTint="@color/colorPrimaryLight"
        android:textColor="#FFFFFF"
        />
</android.support.constraint.ConstraintLayout>